Fix menu hidden under portfolio on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -25,6 +25,7 @@
 }
 
 .site-nav {
+    z-index:100;
     float: right;
     line-height: 56px;
 
